bak/71_kafka-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: kafka
  name: kafka
  #namespace: event-streaming-platform
spec:
  selector:
    app: kafka
  ports:
    - port: 8765
      targetPort: 9376
  type: LoadBalancer
